# Skai-master-gamify-this

./: PLAN.md  README.md  gamification_plan.md.resolved
backend/: .env.example  .gitignore  README.md  pyproject.toml  seed.py  update_menu.py
backend/app/: config.py  dependencies.py  main.py
backend/app/auth/: router.py  schemas.py  service.py
backend/app/calls/: elevenlabs.py  router.py  schemas.py  service.py  sync.py
backend/app/dashboard/: router.py  schemas.py  service.py
backend/app/db/: client.py  functions.sql  models.py
backend/app/db/migrations/: 001_initial_schema.sql  002_add_takeaway_enabled.sql  003_enable_realtime.sql  004_match_menu_default_threshold.sql  005_updated_at_triggers.sql  006_add_missing_indexes.sql  007_add_order_status.sql  008_add_order_parse_status.sql  009_add_dinein_after_hours_and_customer_name.sql
backend/app/menu/: embeddings.py  router.py  schemas.py  service.py
backend/app/orders/: parser.py  schemas.py  service.py
backend/app/settings/: router.py  schemas.py  service.py
backend/app/telephony/: router.py  schemas.py  service.py
backend/app/utils/: pagination.py  response.py  timezone.py
backend/app/webhooks/: router.py  service.py
frontend/: .gitignore  index.html  metadata.json  package-lock.json  package.json
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: AchievementCard.tsx  AchievementToast.tsx  ChallengeCard.tsx  DateRangePicker.tsx  ErrorBoundary.tsx  GamificationProvider.tsx  Layout.tsx  ProgressRing.tsx  SetupProgress.tsx  Sidebar.tsx  StreakBadge.tsx  Toaster.tsx  (+2 more)
(+19 files in other folders)
